--- a/prod/index.html
+++ b/prod/index.html
@@ -13,7 +13,9 @@
   </head>
   <body style="background:#fff;">
     <pre style="background:#eee;font-size:18px;padding:20px;"></pre>
-    <div id="chart" width="600" height="400"></div><br><br>
-    <div id="chart1" width="600" height="400"></div>
+    <div class="charts">
+      <div id="liveChart" class="chart"></div>
+      <div id="httpChart" class="chart"></div>
+    </div>
   </body>
 </html>
